# ws_realman

./: README.md
Azure_Kinect_ROS_Driver/include/azure_kinect_ros_driver/: k4a_calibration_transform_data.h
Azure_Kinect_ROS_Driver/launch/: driver.launch
Azure_Kinect_ROS_Driver/src/: k4a_calibration_transform_data.cpp
rm_robot/rm_65_6f_moveit_config/config/: kinematics.yaml  rm_65_6f.srdf
rm_robot/rm_65_demo/scripts/: test_robot.py  test_robot2.py
rm_robot/rm_65_demo/src/: pick_place_demo.cpp
rm_robot/rm_65_description/: package.xml
rm_robot/rm_65_description/launch/: display.launch  display_rm65.launch  gazebo.launch  gazebo_rm65.launch
rm_robot/rm_65_description/urdf/: rm_65.gazebo.xacro  rm_65.urdf(1).xacro  rm_65.urdf.xacro  rm_65.urdf（2026备份）.xacro  rm_65.urdf（加入virtual）.xacro  rm_65_description.urdf
rm_robot/rm_65_moveit_config/launch/: moveit.rviz
rm_robot/rm_bringup/launch/: rm_robot.launch  rm_robot_bringup_and_control.launch
rm_robot/rm_control/: CMakeLists.txt
rm_robot/rm_control/src/: movej_commander.cpp
rm_robot/rm_driver/: CMakeLists.txt
rm_robot/rm_driver/src/: rm_driver.cpp  rm_robot.h
rm_robot/rm_gazebo/config/: rm_65_trajectory_control.yaml
rm_robot/rm_msgs/: CMakeLists.txt
rm_robot/rm_msgs/msg/: JointPos.msg  Joint_Error_Code.msg  Manual_Set_Force_Pose.msg  Set_Realtime_Push.msg  Six_Force.msg
rm_robot/rm_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3-noetic/turtlebot3_bringup/launch/: turtlebot3_remote.launch
turtlebot3-noetic/turtlebot3_description/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
turtlebot3-noetic/turtlebot3_navigation/launch/: turtlebot3_navigatio_noreadmap.launch
turtlebot3-noetic/turtlebot3_slam/launch/: turtlebot3_active_slam.launch  turtlebot3_cartographer_pre.launch
turtlebot3_simulations-noetic/turtlebot3_gazebo/launch/: turtlebot3_world.launch
urg_node-melodic-devel/launch/: urg_lidar.launch
view_planning_3d_real/: .gitignore  CMakeLists.txt  README.md  package.xml
view_planning_3d_real/include/: Candidate.h  ConverterTools.h  GazeboTools.h  GenerateArm.h  Map.h  TeleopMobile.h  ViewPlanning.h  Viewer.h
view_planning_3d_real/include/gtsam/: BboxEllipsoidFactor.h  BboxPlaneArmLinkFactor.h  CameraXaxisHorizontal.h
view_planning_3d_real/include/gtsam/no-use/: CentorEllipsoidFactor.h
view_planning_3d_real/include/gtsam_quadrics/base/: QuadricProjectionException.h  Utilities.h
view_planning_3d_real/include/gtsam_quadrics/geometry/: BboxCameraFactor copy.h  BboxCameraFactor.h  BoundingBoxFactor.h  ConstrainedDualQuadric.h  DualConic.h  HeightCameraFactor.h  InnerBboxCameraFactor.h  OutlierBboxCameraFactor.h  QuadricAngleFactor.h  QuadricCamera.h
view_planning_3d_real/include/plane/: Plane.h
view_planning_3d_real/python/: init_fk_from_WAMWorkspaceConstraintsExample_end2start.py  init_fk_from_WAMWorkspaceConstraintsExample_start2end.py  init_ik_wam.py
view_planning_3d_real/scripts/: fabo_init.py  moveit_cartesian_fabo.py  moveit_fk_fabo.py  moveit_ik_fabo.py  visualization_ellipsoids.py
view_planning_3d_real/src/: TeleopMobile.cpp  Viewer.cpp
view_planning_3d_real/src/plane/: Plane.cpp
view_planning_3d_real/src/utils/: dataprocess_utils.cpp
view_planning_3d_real/src_gtsam_quadrics/: BboxCameraFactor.cpp  BoundingBoxFactor.cpp  ConstrainedDualQuadric.cpp  DualConic.cpp  HeightCameraFactor.cpp  InnerBboxCameraFactor.cpp  OutlierBboxCameraFactor.cpp  QuadricAngleFactor.cpp  QuadricCamera.cpp
view_planning_3d_real/src_ros/: Direct-ASLAM.cpp  MOVEIT-ASLAM-old.cpp  QF-ASLAM.cpp  pub_object_debug.cpp  real-ASLAM.cpp  save_baselink_tra_from_rosbag.cpp
view_planning_real/: CMakeLists.txt  package.xml
view_planning_real/include/: Converter.h  GenerateArm.h  MapObject.h  Viewer.h
view_planning_real/scripts/: manual_publisher.py
view_planning_real/src/: view_planning_SE3.cpp  view_planning_gazebo.cpp  view_planning_real copy.cpp  view_planning_real.cpp  view_planning_real2.cpp  view_planning_rviz copy 2.cpp  view_planning_rviz copy 3.cpp  view_planning_rviz copy.cpp  view_planning_rviz.cpp
view_planning_real/src/utils/: Converter.cc  Map.cpp  MapObject.cpp  Plane.cpp  Viewer.cpp
wheeltec/: README.md
wheeltec/turn_on_wheeltec_robot/launch/: orb_slam.launch  robot_model_visualization.launch  turn_on_wheeltec_robot.launch  wheeltec_camera.launch  wheeltec_lidar.launch
wheeltec/turn_on_wheeltec_robot/map/: WHEELTEC.pgm
wheeltec/turn_on_wheeltec_robot/urdf/: mini_4wd_robot.urdf
